feat: complete hardening backlog (Steps 27-47) with workflow-first implementation
Correctness:
- Fix HITL state machine: requests stored pending, approve transitions to
  approved/denied (404 on unknown id, fail-closed default, approver+timestamp),
  deny branch of hitl-gate is now reachable (HitlResource, Step 27)
- Replace StackOverflowError catch with pre-parse paren-depth guard (max 50)
  in CalculatorResource (Step 28)
- Align catalog contracts with implementation: fallback_provider failover,
  guardrails expected_format, memory search top_k now consumed; hitl description
  no longer required (Step 29)
- Document that parallel/chain/supervisor/reflection subflows are
  orchestration-only (never invoke the LLM) in README + docs (Step 30)

Security & deployment defaults:
- Bind all compose ports to 127.0.0.1; no default credentials (fail-fast :?),
  Redis --requirepass; pin image tags; postgres-init for litellm_db (31/32/38)
- Scoped LiteLLM virtual key via litellm-keygen one-shot service; app never
  sees the master key (docker-entrypoint.sh injection, Step 33)
- %prod profile enables auth + rate limit by default; ProdSecurityDefaults
  fails startup without UTILITY_API_KEY (Step 34)
- Workflow-native entry guardrails: model allowlist, message caps, user/assistant
  roles only; max_tokens clamp + history truncation in agent_loop (Step 35)
- Memory key/value byte caps (413); LogSanitizer for CR/LF + prompt truncation
  (Steps 36/37)

Robustness:
- onErrors (400/500) in tool-executor converts catalog HTTP errors into
  structured tool_result.error; defense-in-depth handlers in agent_loop (Step 39)
- appendToolResult wraps tool output in <untrusted_tool_output> markers with
  2000-char cap; MCP/A2A no longer echo caller args into loop-back content (Step 40)
- Split UtilityResource god-class into 9 domain resources + BoundedCache/
  LogSanitizer (Step 41); drop dead listMcpTools/listAgents catalog ops (42);
  factor 10x tool-arg extraction into single toolArgs expre